--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             <img src="ressources/images/img-tea-cozy-logo.png">
             <nav>
                 <ul>
-                    <li>Mission</li>
-                    <li>Featured Tea</li>
-                    <li>Locations</li>
+                    <li> Mission </li>
+                    <li> Featured Tea </li>
+                    <li> Locations </li>
                 </ul>
             </nav>
         </header>
@@ -24,7 +24,7 @@
                 </div>
             </div>
 
-            <div class="tea-month">
+            <!-- <div class="tea-month">
                 <h2>Tea of the Month</h2>
                 <h4>What's Steeping at The Tea Cozy?</h4>
                 
@@ -78,13 +78,13 @@
                 <h2>The Tea Cozy</h2>
                 <h5>contact@theteacozy.com</h5>
                 <h5>917-555-8904</h5>
-            </div>
+            </div> -->
         </main>
 
-        <footer>
+        <!-- <footer>
             <div class="copyright">
                 <h5>copyright The Tea Cozy 2017</h5>
             </div>
-        </footer>
+        </footer> -->
     </body>
 </html>
