--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </header>
 
         <main>
-            <div class="mission">
+            <div class="mission-container">
                 <div class="mission-text">
                     <h2>Our Mission</h2>
                     <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
