add tea + change styling

--- a/index.html
+++ b/index.html
@@ -24,35 +24,37 @@
                 </div>
             </div>
 
-            <!-- <div class="tea-month">
+            <div class="tea-container">
                 <h2>Tea of the Month</h2>
                 <h4>What's Steeping at The Tea Cozy?</h4>
                 
-                <div class="tea-container">
+                <div class="teas">
                     <div class="tea">
-                        <div></div>
+                        <img src="ressources/images/img-berryblitz.jpg">
                         <h4>Fall Berry Blitz Tea</h4>
                     </div>
                     <div class="tea">
-                        <div></div>
+                        <img src="ressources/images/img-spiced-rum.png">
                         <h4>Spiced Rum Tea</h4>
                     </div>
                     <div class="tea">
-                        <div></div>
+                        <img src="ressources/images/img-donut.png">
                         <h4>Seasonal Donuts</h4>
                     </div>
+                </div>
+                <div class="teas">
                     <div class="tea">
-                        <div></div>
+                        <img src="ressources/images/img-myrtle-ave.png">
                         <h4>Myrtle Ave Tea</h4>
                     </div>
                     <div class="tea">
-                        <div></div>
+                        <img src="ressources/images/img-bedford-bizarre.png">
                         <h4>Bedford Bizarre Tea</h4>
                     </div>
                 </div>
             </div>
 
-            <div class="locations">
+            <!-- <div class="locations">
                 <h2>Locations</h2>
                 <div class="location-container">
                     <h3 id="headline">Downtown</h3>
@@ -72,9 +74,9 @@
                     <h3>Second Floor</h3>
                     <h3>Portland, Maine</h3>
                 </div>
-            </div>
+            </div> -->
 
-            <div class="contact">
+            <!-- <div class="contact">
                 <h2>The Tea Cozy</h2>
                 <h5>contact@theteacozy.com</h5>
                 <h5>917-555-8904</h5>
