--- a/index.html
+++ b/index.html
@@ -54,27 +54,31 @@
                 </div>
             </div>
 
-            <!-- <div class="locations">
-                <h2>Locations</h2>
+            <div class="locations">
+                <!-- <div> -->
+                    <h2>Locations</h2>
+                <!-- </div> -->
                 <div class="location-container">
-                    <h3 id="headline">Downtown</h3>
-                    <h3>384 West 4th St</h3>
-                    <h3>Suite 108</h3>
-                    <h3>Portland, Maine</h3>
+                    <div class="location">
+                        <h3 id="headline">Downtown</h3>
+                        <h3>384 West 4th St</h3>
+                        <h3>Suite 108</h3>
+                        <h3>Portland, Maine</h3>
+                    </div>
+                    <div class="location">
+                        <h3 id="headline">East Bayside</h3>
+                        <h3>3433 Phiserman's Avenue</h3>
+                        <h3>(Northwest Corner)</h3>
+                        <h3>Portland, Main</h3>
+                    </div>
+                    <div class="location">
+                        <h3 id="headline">Oakdale</h3>
+                        <h3>515 Crescent Avenue</h3>
+                        <h3>Second Floor</h3>
+                        <h3>Portland, Maine</h3>
+                    </div>
                 </div>
-                <div class="location">
-                    <h3 id="headline">East Bayside</h3>
-                    <h3>3433 Phiserman's Avenue</h3>
-                    <h3>(Northwest Corner)</h3>
-                    <h3>Portland, Main</h3>
-                </div>
-                <div class="location">
-                    <h3 id="headline">Oakdale</h3>
-                    <h3>515 Crescent Avenue</h3>
-                    <h3>Second Floor</h3>
-                    <h3>Portland, Maine</h3>
-                </div>
-            </div> -->
+            </div>
 
             <!-- <div class="contact">
                 <h2>The Tea Cozy</h2>
