--- a/index.html
+++ b/index.html
@@ -55,42 +55,42 @@
             </div>
 
             <div class="locations">
-                <!-- <div> -->
+                <div class="location-heading">
                     <h2>Locations</h2>
-                <!-- </div> -->
+                </div>
                 <div class="location-container">
                     <div class="location">
                         <h3 id="headline">Downtown</h3>
-                        <h3>384 West 4th St</h3>
-                        <h3>Suite 108</h3>
-                        <h3>Portland, Maine</h3>
+                        <h4>384 West 4th St</h4>
+                        <h4>Suite 108</h4>
+                        <h4>Portland, Maine</h4>
                     </div>
                     <div class="location">
                         <h3 id="headline">East Bayside</h3>
-                        <h3>3433 Phiserman's Avenue</h3>
-                        <h3>(Northwest Corner)</h3>
-                        <h3>Portland, Main</h3>
+                        <h4>3433 Phiserman's Avenue</h4>
+                        <h4>(Northwest Corner)</h4>
+                        <h4>Portland, Main</h4>
                     </div>
                     <div class="location">
                         <h3 id="headline">Oakdale</h3>
-                        <h3>515 Crescent Avenue</h3>
-                        <h3>Second Floor</h3>
-                        <h3>Portland, Maine</h3>
+                        <h4>515 Crescent Avenue</h4>
+                        <h4>Second Floor</h4>
+                        <h4>Portland, Maine</h4>
                     </div>
                 </div>
             </div>
 
-            <!-- <div class="contact">
+            <div class="contact">
                 <h2>The Tea Cozy</h2>
                 <h5>contact@theteacozy.com</h5>
                 <h5>917-555-8904</h5>
-            </div> -->
+            </div>
         </main>
 
-        <!-- <footer>
+        <footer>
             <div class="copyright">
                 <h5>copyright The Tea Cozy 2017</h5>
             </div>
-        </footer> -->
+        </footer>
     </body>
 </html>
